Execute code on IPython kernel via Notebook WebSocket API